<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Welcome to Cash!</string>
	<string name="app_name">Cash</string>
	<string name="about_title">About</string>
	<string name="about_text">Cash for Android.
		\n\nCopyright (C) 2011 Richard Ricciardelli.
		\n\nThis program is free software: you can redistribute it and/or modify
		it under the terms of the GNU General Public License as published by
		the Free Software Foundation, either version 3 of the License, or
		(at your option) any later version.
		\n\nThis program is distributed in the hope that it will be useful,
		but WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
		GNU General Public License for more details.
		\n\nYou should have received a copy of the GNU General Public License
		along with this program. If not, see http://www.gnu.org/licenses/.
	</string>
	<string name="preferences_title">Preferences</string>
	<string name="vibration_title">Vibration</string>
	<string name="vibration_summary_on">Vibration on</string>
	<string name="vibration_summary_off">Vibration off</string>
	<string name="cash_title">Your cash:</string>
	<string name="last_buy">Your last buy:</string>
	<string name="account_title">Accounts</string>
	<string name="new_account">New account</string>
	<string name="bank_account">Bank account</string>
	<string name="cash_account">Cash account</string>
	<string name="tickets_account">Tickets account</string>
	<string name="account_title_hint">Account title</string>
	<string name="account_type">Account type</string>
	<string name="current_cash">Current cash</string>
	<string name="cash_none">0.00</string>
</resources>
